src/test/ui/cast/cast-ptr-to-int-const.with_feature.stderr
error[E0133]: cast of pointer to int is unsafe and requires unsafe function or block
  --> $DIR/cast-ptr-to-int-const.rs:16:9
   |
LL |         &Y as *const u32 as usize
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^ cast of pointer to int
   |
   = note: casting pointers to integers in constants

error[E0133]: cast of pointer to int is unsafe and requires unsafe function or block
  --> $DIR/cast-ptr-to-int-const.rs:23:5
   |
LL |     &0 as *const i32 as usize
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^ cast of pointer to int
   |
   = note: casting pointers to integers in constants

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0133`.
